playstudios-http-echo/ingress_rule.yaml
####This rule is to redirect 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playstudio-http-echo-app-ingress-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playstudios-echo-app-playstudios-http-echo
            port:
              number: 5678
